--- a/styles/admin-style.css
+++ b/styles/admin-style.css
@@ -35,7 +35,7 @@ h1
     font-size: 2.8vh;
 }
 
-.login-form input
+.login-form input[type=text], input[type=password]
 {
     outline: 0;
     background: #f2f2f2;
@@ -62,3 +62,204 @@ h1
     font-size: 1.3vh;
     cursor: pointer;
 }
+
+header
+{
+    padding-bottom: 5rem;
+}
+
+
+nav
+{
+    width: 100%;
+    height: 6rem;
+    background: rgba(0,0,0, 1);
+    position: fixed;
+    transition: 0.3s;
+    z-index: 2;
+}
+
+nav ul
+{
+    display: flex;
+    margin: 0;
+    padding-right: 10rem;
+    padding-top: 2rem;
+    float: right;
+    transition: 0.3s;
+}
+
+
+nav ul li
+{
+    list-style: none;
+}
+
+nav ul li a
+{
+    display: inline-block;
+    position: relative;
+    color: #fff;
+    padding: 0 1rem;
+    text-decoration: none;
+    font-weight: normal;
+    line-height: 2rem;
+    font-size: 1.1rem;
+    transition-duration: 0.5s;
+}
+
+nav ul li a:hover
+{
+    text-shadow:0.1rem 0.1rem 0.2rem #fff, 0.1rem 0.1rem 0.2rem #ccc;
+}
+
+div.content
+{
+    position: relative;
+    margin-top: 3rem;
+    width: 60%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    text-align: justify;
+    font-size: 1.1rem;
+    padding: 2vh;
+    box-shadow: rgba(0, 0, 0, 0.56) 0 22px 70px 4px;
+    display: flex;
+    justify-content: center;
+}
+
+a.edit
+{
+    font-size: 0.8rem;
+    text-decoration: none;
+    color: white;
+    display: inline-block;
+    width: 3rem;
+    height: 0.9rem;
+    border: 0.1rem solid white;
+    border-radius: 0.2rem;
+    text-align: center;
+    padding: 0.1rem;
+    margin-left: 0.5rem;
+    transition: 0.5s linear;
+    background-position:4rem;
+    background-repeat: no-repeat;
+}
+
+a.edit:hover
+{
+    background-image: linear-gradient(45deg,#6d21bf,#3c5ac7);
+    transition: 0.5s linear;
+    background-repeat: no-repeat;
+    background-position:0;
+}
+
+form.addPost
+{
+    margin-top: 3rem;
+    margin-left: 1.3rem;
+}
+
+form.addPost button
+{
+    font-size: 0.8rem;
+    text-decoration: none;
+    color: white;
+    display: inline-block;
+    width: 6rem;
+    height: 2rem;
+    border: 0.1rem solid white;
+    border-radius: 0.2rem;
+    text-align: center;
+    padding: 0.3rem;
+    margin-left: 0.5rem;
+    transition: 0.5s linear;
+    background-position:11rem;
+    background-repeat: no-repeat;
+    background-color: transparent;
+}
+
+form.addPost button:hover
+{
+    background-image: linear-gradient(45deg,#6d21bf,#3c5ac7);
+    transition: 0.5s linear;
+    background-position:0;
+    cursor: pointer;
+}
+
+form.addPost input[type=text]
+{
+    outline: 0;
+    background: #f2f2f2;
+    width: 14rem;
+    height: 1.5rem;
+    border: 0;
+    box-sizing: border-box;
+}
+
+form.addPost select
+{
+    outline: 0;
+    background: #f2f2f2;
+    width: 7rem;
+    height: 1.5rem;
+    border: 0;
+    box-sizing: border-box;
+}
+
+
+div.menu-items li
+{
+    padding-bottom: 0.2rem;
+}
+
+div.menu-items li ul li:first-of-type
+{
+    padding-top: 1rem;
+}
+
+div.menu-items li ul:last-child
+{
+    padding-bottom: 1rem;
+}
+
+div.menu-items li ul li
+{
+    padding-bottom: 0.5rem;
+    /*font-size: 0.9rem;*/
+}
+
+div.flex-item
+{
+    width: 50%;
+    /*border: 2px solid white;*/
+}
+
+div.flex-item:nth-child(2) ul
+{
+    list-style-type: circle;
+}
+
+div.flex-item:nth-child(2) li
+{
+    padding-bottom: 0.7rem;
+    width: 85%;
+}
+
+h2
+{
+    margin-left: 1.3rem;
+    padding-bottom: 0;
+}
+
+h2:nth-of-type(2)
+{
+    margin-top: 4rem;
+}
+
+hr
+{
+   margin-left: 1.3rem;
+    margin-top: -1rem;
+}
+
