--- a/styles/editPost.css
+++ b/styles/editPost.css
@@ -10,8 +10,7 @@ body
     padding: 0;
     background-color: var(--dark-background);
     color: var(--text-color);
-    font-family: Arial, sans-serif;
-
+    font-family: 'Playfair Display', serif;
 }
 
 h1
@@ -20,56 +19,6 @@ h1
     margin: auto;
     padding-bottom: 5vh;
     font-size: 2.8vh;
-}
-
-header
-{
-    padding-bottom: 5rem;
-}
-
-
-nav
-{
-    width: 100%;
-    height: 6rem;
-    background: rgba(0,0,0, 1);
-    position: fixed;
-    transition: 0.3s;
-    z-index: 2;
-}
-
-nav ul
-{
-    display: flex;
-    margin: 0;
-    padding-right: 10rem;
-    padding-top: 2rem;
-    float: right;
-    transition: 0.3s;
-}
-
-
-nav ul li
-{
-    list-style: none;
-}
-
-nav ul li a
-{
-    display: inline-block;
-    position: relative;
-    color: #fff;
-    padding: 0 1rem;
-    text-decoration: none;
-    font-weight: normal;
-    line-height: 2rem;
-    font-size: 1.1rem;
-    transition-duration: 0.5s;
-}
-
-nav ul li a:hover
-{
-    text-shadow:0.1rem 0.1rem 0.2rem #fff, 0.1rem 0.1rem 0.2rem #ccc;
 }
 
 div.content
@@ -96,6 +45,26 @@ div.content h1
     border-bottom: solid #555;
 }
 
+form input[type="text"]
+{
+    background: transparent;
+    border: none;
+    color: #c9d0d4;
+    font-size: 2.2em;
+    font-weight: 100;
+    border-bottom: solid #555;
+    font-family: 'Playfair Display', serif;
+    margin-bottom: 1rem;
+}
+
+
+div.form-error
+{
+    text-align: center;
+    color: red;
+    display: none;
+    padding-bottom: 1.5rem;
+}
 @media only screen and (max-width: 1000px) {
     div.content
     {
