--- a/styles/editPost.css
+++ b/styles/editPost.css
@@ -45,7 +45,7 @@ div.content h1
     border-bottom: solid #555;
 }
 
-form input[type="text"]
+form input#header
 {
     background: transparent;
     border: none;
@@ -55,6 +55,24 @@ form input[type="text"]
     border-bottom: solid #555;
     font-family: 'Playfair Display', serif;
     margin-bottom: 1rem;
+}
+
+form div.underText
+{
+    text-align: left;
+    margin-top: 2rem;
+}
+
+form input[type="text"]
+{
+    background: transparent;
+    border: none;
+    color: #c9d0d4;
+    font-size: 1.3rem;
+    border-bottom: solid #555;
+    font-family: 'Playfair Display', serif;
+    margin-bottom: 1rem;
+    width: 100%;
 }
 
 
